[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Levels/Base/BaseDay3.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Levels/Base/IslanderController.gd" type="Script" id=2]
[ext_resource path="res://scenes/Levels/Islander/ExperimentReplay.gd" type="Script" id=3]
[ext_resource path="res://scenes/Levels/Islander/Day3/Day3.gd" type="Script" id=4]
[ext_resource path="res://scenes/UIMessages/DialogueManager2.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Island/DifficultyManager.gd" type="Script" id=6]

[node name="IslanderDay3" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="Objects/Props/Islander" index="9"]
current = true
zoom = Vector2( 0.5, 0.5 )
process_mode = 0
smoothing_enabled = true

[node name="DialogueManager" parent="HUDLayer/HUD" index="7" instance=ExtResource( 5 )]
DIALOGUE_FILE = "res://assets/Dialogue/Day3b.json"

[node name="IslanderInput" type="Node" parent="." index="5"]
script = ExtResource( 2 )

[node name="ExperimentReplay" type="Node" parent="." index="6"]
script = ExtResource( 3 )

[node name="DifficultyManager" type="Node" parent="." index="9"]
script = ExtResource( 6 )
[connection signal="prop_added" from="Objects/Props" to="AIController" method="_on_Props_prop_added"]
[connection signal="die" from="Objects/Props/Islander" to="." method="_on_Islander_die"]
[connection signal="area_entered" from="Objects/Props/Islander/PlayerInteraction" to="IslanderInput" method="_on_PlayerInteraction_area_entered"]
[connection signal="area_exited" from="Objects/Props/Islander/PlayerInteraction" to="IslanderInput" method="_on_PlayerInteraction_area_exited"]
[connection signal="use_item" from="HUDLayer/HUD" to="Objects/Props/Islander" method="_on_HUD_use_item"]
[connection signal="finish_dialogue" from="HUDLayer/HUD/DialogueManager" to="." method="_on_DialogueManager_finish_dialogue"]
[connection signal="objectives_updated" from="Day3Objectives" to="." method="_on_Day3Objectives_objectives_updated"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="place_item" from="ExperimentReplay" to="Objects/Props" method="_on_place_item"]
